--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 		<link
 			rel="shortcut icon"
 			type="image/x-icon"
-			href="./images/pizza.png"
+			href="./images/pizza-king-logo.png"
 		/>
 		<title>Pizza King</title>
 	</head>
